<resources>
    <string name="app_name">ProApp</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="tehvil">Tehvil</string>
    <string name="customer">Customer</string>
    <string name="tap_to_upload_image">Tap to Upload image</string>
    <string name="telephone">Telephone</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="adress">Adress</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="exit">Exit</string>
    <string name="sekil">sekil</string>


</resources>
